# UniBoCG23-Elaborato-2-v2

./: .gitignore  CMakeLists.txt  README.md
src/: FragmentShader_Text.fs  GestioneInterazioni.cpp  GestioneTelecamera.cpp  GestioneTelecamera.h  GestioneTesto.cpp  GestioneVAO.cpp  Strutture.h  VertexShader_Text.vs  enum_illuminazione.h  fragmentShader_C.fs  fragmentShader_C.glsl  fragmentShader_CubeMap.glsl  fragmentShader_riflessione.glsl  geometria.cpp  gestioneTexture.cpp  inizializzazioni_meshOBJ.cpp  load_meshes_assimp.cpp  load_meshes_assimp.hpp  main.cpp  vertexShader_C.glsl  vertexShader_C.vs  vertexShader_CubeMap.glsl  vertexShader_CubeMap.vs  vertexShader_riflessione.vs
